--- a/style.css
+++ b/style.css
@@ -131,6 +131,10 @@
     
 }
 
+.sub-card:hover{
+    transform: scale(1.05);
+    box-shadow: 0 10px 25px;
+}
 .sub-card h4{
     text-align: center;
 }
@@ -167,7 +171,10 @@
     box-shadow: 20px 20px 50px rgba(108, 166, 221, 0.5);
     flex-wrap: wrap;
 }
-
+.card-1:hover{
+    transform: scale(1.05);
+    box-shadow: 0 10px 25px;
+}
 .card-image img {
     width: 100%;
     height: 200px;
